--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,69 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_above="@+id/nextButton"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="60dp" />
+
+    <LinearLayout
+        android:id="@+id/indicatorLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/nextButton"
+        android:layout_alignBottom="@+id/nextButton"
+        android:layout_marginVertical="21dp"
+        android:layout_marginStart="40dp"
+        android:orientation="horizontal">
+
+        <View
+            android:id="@+id/indicator1"
+            android:layout_width="16dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/indicator_inactive" />
+
+        <View
+            android:id="@+id/indicator2"
+            android:layout_width="16dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/indicator_inactive" />
+
+        <View
+            android:id="@+id/indicator3"
+            android:layout_width="16dp"
+            android:layout_height="8dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/indicator_inactive" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/skipTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/skip"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:padding="16dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="10dp"
+        android:padding="10dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:textColor="@color/main_purple" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true"
-        android:layout_above="@id/indicatorLayout"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp" />
-
-    <LinearLayout
-        android:id="@+id/indicatorLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp">
-
-        <View
-            android:id="@+id/indicator1"
-            android:layout_width="16dp"
-            android:layout_height="8dp"
-            android:background="@drawable/indicator_inactive"
-            android:layout_margin="4dp" />
-
-        <View
-            android:id="@+id/indicator2"
-            android:layout_width="16dp"
-            android:layout_height="8dp"
-            android:background="@drawable/indicator_inactive"
-            android:layout_margin="4dp" />
-
-        <View
-            android:id="@+id/indicator3"
-            android:layout_width="16dp"
-            android:layout_height="8dp"
-            android:background="@drawable/indicator_inactive"
-            android:layout_margin="4dp" />
-    </LinearLayout>
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/next"
-        android:layout_alignParentBottom="true"
+        android:theme="@style/FormButton"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="120dp"
+        android:backgroundTint="@color/main_purple"
+        android:text="@string/next"
+        android:textSize="14sp"
+        app:cornerRadius="14dp" />
+
 </RelativeLayout>
