--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -49,6 +49,7 @@
         android:id="@+id/skipTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
         android:text="@string/skip"
         android:textSize="14sp"
         android:layout_alignParentTop="true"
@@ -72,6 +73,7 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="120dp"
         android:backgroundTint="@color/main_purple"
+        android:fontFamily="@font/montserrat"
         android:text="@string/next"
         android:textSize="14sp"
         app:cornerRadius="14dp" />
