--- a/app/src/main/res/layout/no_internet_layout.xml
+++ b/app/src/main/res/layout/no_internet_layout.xml
@@ -23,6 +23,7 @@
         android:id="@+id/noInternetTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
         android:text="@string/no_internet_title"
         android:textSize="24sp"
         android:textColor="@color/black"
@@ -35,6 +36,7 @@
     <TextView
         android:id="@+id/noInternetMessage"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/montserrat"
         android:layout_height="wrap_content"
         android:text="@string/no_internet_message"
         android:textSize="16sp"
@@ -47,6 +49,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/retryButton"
+        android:fontFamily="@font/montserrat"
         android:layout_width="342dp"
         android:layout_height="65dp"
         android:text="@string/retry_internet_check"
