--- a/app/src/main/res/layout/splash_screen_layout.xml
+++ b/app/src/main/res/layout/splash_screen_layout.xml
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/drivenext"
+            android:fontFamily="@font/montserrat"
             android:textSize="24sp"
             android:textColor="@color/main_purple"
             android:textStyle="bold"
@@ -33,6 +34,7 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:layout_height="wrap_content"
             android:text="@string/splash_subtitle"
             android:textSize="14sp"
