--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,13 @@
     <color name="gray">#FF404040</color>
     <color name="light_black">#FF1A1A1A</color>
     <color name="ultra_light_gray">#FFD0D5DD</color>
+
+    <color name="stylishPurple">#2A1246</color>
+    <color name="grayText">#1A1A1A</color>
+    <color name="stylishGrayText">#344054</color>
+    <color name="gentleGrayText">#B3000000</color>
+    <color name="anotherGray">#667085</color>
+    <color name="darkerGray">#404040</color>
+    <color name="allBlack">#101828</color>
+    <color name="darkPurple">#29183B</color>
 </resources>
